Fixed whitespace appearing below <html>

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -18,20 +18,12 @@
 
 html,
 body {
-  height: 100%;
-  width: 100%;
-  min-height: 100vh;
-  min-width: 100vw;
   margin: 0;
   padding: 0;
 }
 
 html {
-  max-height: 100%;
-}
-
-body {
-  overflow: auto;
+  min-height: 100%;
 }
 
 .desktop-only {
@@ -56,7 +48,6 @@ body {
 }
 
 // Page Styles
-
 body {
   background: $backgroundGradient;
   background-size: contain;
@@ -191,7 +182,7 @@ main {
   cursor: pointer;
 
   &__title {
-    margin-bottom: 10px;
+    padding-bottom: 10px;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -201,7 +192,7 @@ main {
     }
 
     span.text {
-      margin-right: 5px;
+      padding-right: 5px;
     }
   }
 
@@ -244,7 +235,7 @@ footer {
   .attribution {
     font-size: 12px;
     text-align: center;
-    margin-top: 15px;
+    padding-top: 15px;
     z-index: 9999;
     color: hsl(0, 0%, 100%);
     a {
